[mailbox] added api, service, repository method get by email address
